# playlist-formatter

./: .clang-format  .editorconfig  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  PlaylistFormatter.bat  PlaylistFormatter.py  PlaylistGui.py  README.md  build.sh  build_cpp.sh  colorprint.py  common.sh  git-tag-version.sh  install.sh  playlist_tool.bat  playlist_tool.py  pyproject.toml  requirements.txt  setup.cfg  test.csv  test.txt
.github/: dependabot.yml
.github/workflows/: cargo.yml  rust-build.yml  rust-lint.yml  rust.yml
PlaylistFormatter/: Platform.py  PlaylistCli.py  PlaylistFormatter.py  PlaylistGui.cpp  PlaylistGui.py  colorprint.py
src/: cli.rs  formatted.rs  formatter.rs  lib.rs  main.rs  playlist.rs  playlist_tests.rs  rekordbox.rs  serato.rs  track.rs  types.rs  utils.rs
tests/: playlist_tests.rs
tests/files/: Basso 10.1.2019.csv  Basso 13.12.2018.csv  SUBRHYTHM 8.3.2024.csv  formatted.csv  new.csv  out.csv  rekordbox 2023-03-13.txt  rekordbox-2020.12.20.txt  serato.csv  serato.txt
