[package]
name = "playlist_formatter"
version = "2.1.1"
authors = ["Akseli Lukkarila <esgrove@outlook.com>"]
description = "DJ playlist formatting utility"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Esgrove/playlist_tool"
categories = ["command-line-utilities"]
keywords = ["dj", "playlist", "serato", "rekordbox"]

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
clap = { version = "4.5.28", features = ["derive"] }
colored = "3.0.0"
csv = "1.3.1"
dunce = "1.0.5"
encoding_rs_io = "0.1.7"
env_logger = "0.11.6"
home = "0.5.11"
log = "0.4.25"
regex = "1.11.1"
rust_xlsxwriter = { version = "0.83.0", features = ["chrono"] }
strum = { version = "0.27.0", features = ["derive"] }
strum_macros = "0.26.4"
titlecase = "3.3.0"

[[bin]]
name = "playfmt"
path = "src/main.rs"

[profile.dev]
incremental = true

[profile.release]
lto = true
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1
