[package]
name = "playlist_formatter"
version = "2.1.2"
authors = ["Akseli Lukkarila <esgrove@outlook.com>"]
description = "DJ playlist formatting utility"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Esgrove/playlist_tool"
categories = ["command-line-utilities"]
keywords = ["dj", "playlist", "serato", "rekordbox"]
rust-version = "1.85"

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
colored = "3.0.0"
csv = "1.3.1"
dunce = "1.0.5"
encoding_rs_io = "0.1.7"
env_logger = "0.11.7"
home = "0.5.11"
log = "0.4.26"
regex = "1.11.1"
rust_xlsxwriter = { version = "0.84.2", features = ["chrono"] }
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.0"
titlecase = "3.4.0"

[[bin]]
name = "playfmt"
path = "src/main.rs"

[profile.dev]
incremental = true

[profile.release]
lto = true
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1
