[package]
name = "playlist_formatter"
version = "2.2.2"
authors = ["Akseli Lukkarila <esgrove@outlook.com>"]
description = "DJ playlist formatting utility"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Esgrove/playlist_tool"
categories = ["command-line-utilities"]
keywords = ["dj", "playlist", "serato", "rekordbox"]
rust-version = "1.90"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.54", features = ["derive"] }
colored = "3.0.0"
csv = "1.4.0"
dunce = "1.0.5"
encoding_rs_io = "0.1.7"
env_logger = "0.11.8"
home = "0.5.12"
log = "0.4.29"
regex = "1.12.2"
rust_xlsxwriter = { version = "0.92.2", features = ["chrono"] }
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
titlecase = "3.6.0"

[[bin]]
name = "playfmt"
path = "src/main.rs"

[profile.dev]
incremental = true

[profile.release]
lto = true
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# https://rust-lang.github.io/rust-clippy/master/index.html
unwrap_used = "deny"
enum_glob_use = "deny"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
